// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform pages/CourseOverview/CourseInstructor Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="flex flex-row"
      >
        <div
          class="flex w-1/12 items-start justify-center"
        >
          <div
            class="avatar text-gray-secondary bg-gray-4 w-8 h-8 overflow-hidden"
          >
            SD
          </div>
        </div>
        <div
          class="w-11/12"
        >
          <h4
            class="font-heading text-h-sm text-dark-primary py-1"
          >
            Sarah Doe
          </h4>
          <p
            class="text-sm text-dark-secondary pb-2"
          >
            Engineer
          </p>
          <p
            class="text-sm text-dark-secondary"
          >
            Sarah has built a career as an electronics engineer, specializing in designing and building integrated circuits.
      Sarah has a bachelor's degree in electrical engineering from the University of Michigan. 
      She has worked as an engineer at companies like Motorola and Texas Instruments.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-row"
    >
      <div
        class="flex w-1/12 items-start justify-center"
      >
        <div
          class="avatar text-gray-secondary bg-gray-4 w-8 h-8 overflow-hidden"
        >
          SD
        </div>
      </div>
      <div
        class="w-11/12"
      >
        <h4
          class="font-heading text-h-sm text-dark-primary py-1"
        >
          Sarah Doe
        </h4>
        <p
          class="text-sm text-dark-secondary pb-2"
        >
          Engineer
        </p>
        <p
          class="text-sm text-dark-secondary"
        >
          Sarah has built a career as an electronics engineer, specializing in designing and building integrated circuits.
      Sarah has a bachelor's degree in electrical engineering from the University of Michigan. 
      She has worked as an engineer at companies like Motorola and Texas Instruments.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform pages/CourseOverview/CourseInstructor With Image Avatar 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="flex flex-row"
      >
        <div
          class="flex w-1/12 items-start justify-center"
        >
          <div
            class="avatar text-gray-secondary bg-gray-4 w-8 h-8 overflow-hidden"
          >
            <img
              alt="Sarah Doe"
              class="w-full"
              data-nimg="1"
              decoding="async"
              height="48"
              loading="lazy"
              src="https://images.unsplash.com/photo-1573497161161-c3e73707e25c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=256&q=80"
              style="color: transparent;"
              width="48"
            />
          </div>
        </div>
        <div
          class="w-11/12"
        >
          <h4
            class="font-heading text-h-sm text-dark-primary py-1"
          >
            Sarah Doe
          </h4>
          <p
            class="text-sm text-dark-secondary pb-2"
          >
            Engineer
          </p>
          <p
            class="text-sm text-dark-secondary"
          >
            Sarah has built a career as an electronics engineer, specializing in designing and building integrated circuits.
      Sarah has a bachelor's degree in electrical engineering from the University of Michigan. 
      She has worked as an engineer at companies like Motorola and Texas Instruments.
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-row"
    >
      <div
        class="flex w-1/12 items-start justify-center"
      >
        <div
          class="avatar text-gray-secondary bg-gray-4 w-8 h-8 overflow-hidden"
        >
          <img
            alt="Sarah Doe"
            class="w-full"
            data-nimg="1"
            decoding="async"
            height="48"
            loading="lazy"
            src="https://images.unsplash.com/photo-1573497161161-c3e73707e25c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=256&q=80"
            style="color: transparent;"
            width="48"
          />
        </div>
      </div>
      <div
        class="w-11/12"
      >
        <h4
          class="font-heading text-h-sm text-dark-primary py-1"
        >
          Sarah Doe
        </h4>
        <p
          class="text-sm text-dark-secondary pb-2"
        >
          Engineer
        </p>
        <p
          class="text-sm text-dark-secondary"
        >
          Sarah has built a career as an electronics engineer, specializing in designing and building integrated circuits.
      Sarah has a bachelor's degree in electrical engineering from the University of Michigan. 
      She has worked as an engineer at companies like Motorola and Texas Instruments.
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
